Closed
Bug 473400
Opened 16 years ago
Closed 16 years ago
CSS3 media queries not reapplied when using text-only zoom
Categories
(Core :: CSS Parsing and Computation, defect, P3)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla1.9.1b3
People
(Reporter: sgrossklass, Assigned: dbaron)
References
(Blocks 1 open bug, )
Details
(Keywords: fixed1.9.1)
Attachments
(2 files)
|
367 bytes,
text/html
|
Details | |
|
6.75 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.2; de-AT; rv:1.8.1.19) Gecko/20081204 SeaMonkey/1.1.14
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.2; de; rv:1.9.1b2) Gecko/20081201 Firefox/3.1b2
When using the old-style text-only zoom, FF 3.1b2 fails to reapply the media queries affecting "screen".
Upon changing the window size or when using the default "whole-page" zoom, however, it does work as expected.
On the example page given, the content max-width and line height are adjusted according to available width in 'em', and rendering of the ("pop-up") quick navigation menu on the left depends on available height, again in 'em'.
Thus it looks like text-only zoom does not update the effective dimensions of the visible area.
Even if this should not be a bug for whatever reason, it is unexpected behavior at the very least.
Reproducible: Always
Comment 1•16 years ago
|
||
I suspect that the text-only zoom is exactly as it sounds, text only. If the user wishes to zoom the content, that is what the regular zoom is for. Is this a regression and can you provide a testcase?
Updated•16 years ago
|
Component: General → Layout
OS: Windows Server 2003 → All
Product: Firefox → Core
QA Contact: general → layout
Hardware: x86 → All
Version: unspecified → Trunk
Comment 2•16 years ago
|
||
Even with text zoom, the background color should change between green and yellow - I think. It does with page zoom, but not with text zoom.
(tested with a window about 1100px wide)
| Assignee | ||
Comment 3•16 years ago
|
||
This is clearly a valid bug, since the media queries are applied correctly after resizing the window one pixel. The problem is that I didn't hook up text zoom changes to triggering media query recalculation.
Though I'd note that the only thing that's changing with text zoom is the meaning of the 'em' unit, not any effective dimensions.
Assignee: nobody → dbaron
Status: UNCONFIRMED → NEW
Component: Layout → Style System (CSS)
Ever confirmed: true
QA Contact: layout → style-system
| Assignee | ||
Comment 4•16 years ago
|
||
Simple patch; I had a little fun writing the test.
I want it separate from test_media_queries.html partly because it's Gecko-specific, but also because it doesn't have a whole lot in common.
I did confirm that two of the second block of tests (first run through 4...7, for text zoom) fail without the patch and the patch fixes them.
Attachment #356910 -
Flags: superreview?(bzbarsky)
Attachment #356910 -
Flags: review?(bzbarsky)
Updated•16 years ago
|
Attachment #356910 -
Flags: superreview?(bzbarsky)
Attachment #356910 -
Flags: superreview+
Attachment #356910 -
Flags: review?(bzbarsky)
Attachment #356910 -
Flags: review+
| Assignee | ||
Updated•16 years ago
|
Flags: blocking1.9.1?
| Assignee | ||
Comment 5•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Priority: -- → P3
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Flags: blocking1.9.1? → blocking1.9.1+
| Assignee | ||
Comment 6•16 years ago
|
||
Keywords: fixed1.9.1
Target Milestone: mozilla1.9.2a1 → mozilla1.9.1b3
You need to log in
before you can comment on or make changes to this bug.
Description
•