Recheck media queries when changing text zoom since em units have changed.  (Bug 473400)  r+sr=bzbarsky